[package]
name = "extys"
authors = ["Lukas Seidel"]
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pr0me/exTyS"
description = "Post-Processing tool for Joern slices, extracting type information for the use in ML models"

[profile.release]
incremental = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.3"
itertools = "0.10.5"
memchr = { version = "2.5.0", features = ["std"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
